NEXT
  - S3 emulation: Follow S3 Trio64 documentation and mask the Linear
    Window Position bits according to the size of the memory. You
    can only place it on a multiple of the memory size. This silences
    warnings caused by Line Wars II which appears to modify only the
    upper byte but not the lower when modifying this register, which
    then leaves 0xA0 in the lower half. That lower half would be
    ignored for 1MB or larger video memory sizes. (joncampbell123).
  - S3 XGA emulation: Add XGA acceleration for 4bpp packed 16-color
    SVGA modes. A CAD package has S3 support drivers that use the
    16-color 4bpp packed modes and expects XGA acceleration to work.
    (joncampbell123).
  - Add "-o int13" option to IMGMOUNT to direct the FAT driver to do
    all disk I/O through INT 13h instead of directly. This is intended
    for certain demoscene productions that apparently like to make
    files appear out of thin air by intercepting INT 13h floppy disk
    I/O and then asking MS-DOS to run something from it. Hack for
    "DS_BLISS" demo. (joncampbell123).
  - add option "[dos] automount drive directories" for Windows builds,
    this will mount existing drive directories from C to Y drive (aybe).
  - fix off-center and off-screen window after entering the
    configuration tool while using TTF output mode (aybe).
  - add menu item for centering window "Video/Center window" (aybe).
  - Fixed update-version-number script to patch all *.iss files, not 
    just the specific one it did before, to ensure future releases have
    correct version numbers. (joncampbell123).
  - Updated Nuked-OPL3 code to nukeykt/Nuked-OPL3@cfedb09 (StevenSYS) 
  - Updated SDL2 library to 2.30.4 (maron2000)
  - Fixed TTF mode didn't change to graphic mode when machine = Hercules
    (maron2000)
  - Configuration tool: (aybe)
    - more Windows 3.1 look'n'feel (themes w/ host dark mode detection)
    - enhance main window layout, it is now visible in its entirety